# telegrambot_marksix_calculation

./: .dockerignore  .gitignore  Dockerfile  FINAL_ACCURACY_REPORT.md  IMPROVEMENTS_REPORT.md  PHASE4_RESULTS.md  PHASE5_TUNING_RESULTS.md  PHASE6_RESULTS.md  PREDICTION_FEATURE.md  README.md  README_DEPLOYMENT.md  SECURITY_AUDIT.md  WEIGHTED_ENSEMBLE_RESULTS.md  agent_setup.py  agentbot.py  backtest_prediction.py  backtest_results.json  docker-compose.yml  echobot.py  env.sample  history.csv  live_predictions.csv  main.py  models.py  prediction_engine.py  prediction_tracker.py  pyproject.toml  test_calculator_standalone.py  tuning_results.json
.cursor/rules/: uv-project-management.mdc
mark_six_history copy/: fetch_data.py  history.csv
