[project]
name = "cohort5"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "langfuse>=3.8.1",
    "matplotlib>=3.10.8",
    "pandas>=3.0.1",
    "pillow>=12.1.1",
    "pydantic-ai-slim[logfire,openai]>=1.9.1",
    "python-dotenv>=1.2.1",
    "python-telegram-bot[job-queue]>=22.5",
    "pytz>=2025.2",
    "requests>=2.32.5",
    "simpleeval>=1.0.3",
]
